Update Calculator app
Update Calculator app

--- a/Calculator-Task/index.html
+++ b/Calculator-Task/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div>
-      <input type="text" id="screen" disabled />
+      <input type="text" id="screen" placeholder="0" disabled />
       <br />
       <button onclick="addToDisplay('7')">7</button>
       <button onclick="addToDisplay('8')">8</button>
