--- a/light-On-Off/index.html
+++ b/light-On-Off/index.html
@@ -3,31 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lamp On-Off</title>
-
+    <title>Light On-Off</title>
     <style>
       * {
         padding: 0;
         margin: 0;
       }
       .imgOnOff {
-        width: 20%;
-        min-height: 50vh;
+        width: 40%;
         margin: 10px auto;
-        border: 1px solid #000;
-        text-align: center;
       }
     </style>
   </head>
   <body>
     <div class="imgOnOff">
-      <img
-        onmouseover="src='on.jpg'"
-        onmouseout="src='off.jpg'"
-        src="off.jpg"
-      />
+      <img onmouseover="hover(this)" onmouseout="out(this)" src="off.svg" />
+      <button class="btn">ON</button>
+      <button class="btn">OFF</button>
     </div>
-
-    <script src="app.js"></script>
+    <script>
+      function hover(e) {
+        e.src = "on.svg";
+        // e.style.width = "100%";
+      }
+      function out(e) {
+        e.src = "off.svg";
+      }
+    </script>
   </body>
 </html>
