moving charactor added

--- a/Animation-Game/index.html
+++ b/Animation-Game/index.html
@@ -10,14 +10,15 @@
     <div class="container">
       <img
         src="animation-img/chun-li/standing.gif"
-        onkeypress=""
-        id="leftCharactor"
+        onmouseover="moveForward(this)"
+        id="charactor"
       />
-      <img
+
+      <!-- <img
         src="animation-img/chun-li/standing.gif"
         onkeypress=""
         id="rightCharactor"
-      />
+      /> -->
     </div>
     <script src="app.js"></script>
   </body>
