--- a/Animation-Game/index.html
+++ b/Animation-Game/index.html
@@ -10,7 +10,8 @@
     <div class="container">
       <img
         src="animation-img/chun-li/standing.gif"
-        onmouseover="moveForward(this)"
+        onmousemove="moveForward(this)"
+        onmouseout="src='animation-img/chun-li/standing.gif'"
         id="charactor"
       />
 
