--- a/Animation-Game/index.html
+++ b/Animation-Game/index.html
@@ -11,15 +11,9 @@
       <img
         src="animation-img/chun-li/standing.gif"
         onmousemove="moveForward(this)"
-        onmouseout="src='animation-img/chun-li/standing.gif'"
+        onmouseout="moving(this)"
         id="charactor"
       />
-
-      <!-- <img
-        src="animation-img/chun-li/standing.gif"
-        onkeypress=""
-        id="rightCharactor"
-      /> -->
     </div>
     <script src="app.js"></script>
   </body>
