one side character completed
one side character completed

--- a/Animation-Game/index.html
+++ b/Animation-Game/index.html
@@ -9,10 +9,9 @@
   <body>
     <div class="container">
       <img
-        src="animation-img/chun-li/standing.gif"
-        onmousemove="moveForward(this)"
-        onmouseout="moving(this)"
         id="charactor"
+        src="animation-img/chun-li/standing.gif"
+        onkeydown="Animation()"
       />
     </div>
     <script src="app.js"></script>
