second character added
second character added

--- a/Animation-Game/index.html
+++ b/Animation-Game/index.html
@@ -9,9 +9,14 @@
   <body>
     <div class="container">
       <img
-        id="charactor"
+        id="leftCharactor"
         src="animation-img/Sol-badguy/standingPositions.gif"
-        onkeydown="Animation()"
+        onkeydown="leftAnimation()"
+      />
+      <img
+        id="rightCharactor"
+        src="animation-img/Terry-Bogard/starting.gif"
+        onkeydown="rightAnimation()"
       />
     </div>
     <script src="app.js"></script>
