timer function added
timer function added

--- a/Animation-Game/index.html
+++ b/Animation-Game/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="container">
+      <p id="timer">60 seconds</p>
       <img
         id="leftCharactor"
         src="animation-img/Sol-badguy/standingPositions.gif"
