--- a/Animation-Game/index.html
+++ b/Animation-Game/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://common.olemiss.edu/_js/sweet-alert/sweet-alert.min.js"></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://common.olemiss.edu/_js/sweet-alert/sweet-alert.css"
+    />
     <title>Animation Game By Ahmed</title>
   </head>
   <body>
     <div class="container">
-      <p id="timer">60 seconds</p>
+      <p id="timer">60</p>
       <img
         id="leftCharactor"
         src="animation-img/Sol-badguy/standingPositions.gif"
