--- a/Animation-Game/index.html
+++ b/Animation-Game/index.html
@@ -6,13 +6,18 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://common.olemiss.edu/_js/sweet-alert/sweet-alert.min.js"></script>
     <link
-    rel="stylesheet"
+      rel="stylesheet"
       type="text/css"
       href="https://common.olemiss.edu/_js/sweet-alert/sweet-alert.css"
     />
     <title>Animation Game By Ahmed</title>
   </head>
   <body>
+    <div class="posterContainer">
+      <img src="animation-img/terryPoster.png" alt="" />
+      <img src="" alt="" />
+      <img src="animation-img/poster.png" alt="" />
+    </div>
     <div class="container">
       <p id="timer">60</p>
       <img
