--- a/Animation-Game/index.html
+++ b/Animation-Game/index.html
@@ -13,10 +13,10 @@
     <title>Animation Game By Ahmed</title>
   </head>
   <body>
-    <div class="posterContainer">
-      <img src="animation-img/terryPoster.png" alt="" />
-      <img src="" alt="" />
+    <div id="posterContainer">
+      <img src="animation-img/posterCover.jpg" alt="" />
       <img src="animation-img/poster.png" alt="" />
+      <img src="animation-img/terryPoster.png" alt="" />
     </div>
     <div class="container">
       <p id="timer">60</p>
