--- a/Animation-Game/index.html
+++ b/Animation-Game/index.html
@@ -15,8 +15,10 @@
   <body>
     <div id="posterContainer">
       <img src="animation-img/posterCover.jpg" alt="" />
-      <img src="animation-img/poster.png" alt="" />
-      <img src="animation-img/terryPoster.png" alt="" />
+      <div id="figter">
+        <img src="animation-img/poster.png" alt="" />
+        <img src="animation-img/terryPoster.png" alt="" />
+      </div>
     </div>
     <div class="container">
       <p id="timer">60</p>
