--- a/Animation-Game/index.html
+++ b/Animation-Game/index.html
@@ -13,10 +13,8 @@
     <title>Animation Game By Ahmed</title>
   </head>
   <body>
-    <div id="posterContainer">
-      <img src="animation-img/posterCover.jpg" alt="" />
-    </div>
     <div class="container">
+      <img id="poster" src="animation-img/poster.png" alt="" />
       <p id="timer">60</p>
       <img
         id="leftCharactor"
